--- a/src/app/layouts/component/header/head/head.component.scss
+++ b/src/app/layouts/component/header/head/head.component.scss
@@ -1,7 +1,7 @@
 .Launch__title {
   white-space: nowrap;
   text-overflow: ellipsis;
-  overflow: hidden;
+  //overflow: hidden;
   width: 100%;
   max-width: 16rem;
   padding: 0;
