--- a/src/app/layouts/component/sidebar/sidebar-action/sidebar-action.component.html
+++ b/src/app/layouts/component/sidebar/sidebar-action/sidebar-action.component.html
@@ -1,6 +1,6 @@
 <button *ngFor="let item of listMenu ; trackBy: trackByFn "
         [class]=item.class
-        (click)="activeButton(item)"
+        [appActiveBtn]="item"
 >
   <svg width="16" height="16" xmlns="http://www.w3.org/2000/svg">
     <path
