--- a/src/app/layouts/component/content/content.component.scss
+++ b/src/app/layouts/component/content/content.component.scss
@@ -3,6 +3,7 @@
  // position: absolute;
  // left: 18.75rem;
   display: flex;
+  justify-content: space-between;
   width: 100%;
   height: 100%;
   color: var(--white);
