--- a/src/app/layouts/component/sidebar/sidebar.component.scss
+++ b/src/app/layouts/component/sidebar/sidebar.component.scss
@@ -1,7 +1,7 @@
 :host {
   display: flex;
-  height: 100%;
-  //position: fixed;
+  height: 90%;
+  position: fixed;
   flex-direction: column;
   justify-content: space-between;
   color: var(--mediumGray);
