--- a/src/app/layouts/component/sidebar/sidebar-create-new/modal/modal.component.html
+++ b/src/app/layouts/component/sidebar/sidebar-create-new/modal/modal.component.html
@@ -1,28 +1,53 @@
-<form >
+<div class="form">
 
-<h1 mat-dialog-title>Add new board</h1>
+  <h1 mat-dialog-title>Add New Board</h1>
 
-<div mat-dialog-content>
-  <mat-form-field class="form-field">
-    <mat-label>Name</mat-label>
-    <input matInput type="text">
-    <button  matSuffix mat-icon-button aria-label="Clear">
-      <mat-icon>close</mat-icon>
-    </button>
-  </mat-form-field>
+  <div mat-dialog-content>
+    <mat-form-field class="form-field">
+      <mat-label>Name</mat-label>
+      <input matInput type="text" [(ngModel)]="name">
+      <button *ngIf="name" matSuffix mat-icon-button aria-label="Clear" (click)="name=''">
+        <mat-icon>close</mat-icon>
+      </button>
+    </mat-form-field>
 
-  <mat-form-field *ngFor="let i of columnCount" class="form-field">
-    <mat-label>Column {{i}}</mat-label>
-    <input matInput type="text">
-    <button  matSuffix mat-icon-button aria-label="Clear">
-      <mat-icon>close</mat-icon>
-    </button>
-  </mat-form-field>
+    <div class="input-column" *ngFor="let item of columnsArr; index as i">
+      <mat-form-field class="form-field">
+        <mat-label>Column</mat-label>
+        <input matInput type="text" [(ngModel)]="item.column">
+        <button *ngIf="item.column" matSuffix mat-icon-button aria-label="Clear" (click)="item.column=''">
+          <mat-icon>close</mat-icon>
+        </button>
+      </mat-form-field>
 
-  <button class="btnForm"  mat-raised-button (click)="addColumns()">Add columns</button>
-  <button class="btnForm" mat-raised-button mat-dialog-close="true" color="primary">Add columns</button>
+      <button *ngIf="columnsArr.length>1"
+              class="btn-closed"
+              matSuffix
+              mat-icon-button
+              (click)="deleteColumn(i)"
+      >
+        <mat-icon>close</mat-icon>
+      </button>
+    </div>
+
+    <div class="actions" mat-dialog-actions>
+
+      <button class="btnForm"
+              mat-raised-button
+              (click)="addColumns()"
+      >+ Add New Column
+      </button>
+
+      <button
+        [disabled]="!name"
+        class="btnForm" mat-raised-button
+        (click)="closed()"
+        color="primary">Create New Board
+      </button>
+    </div>
+  </div>
 </div>
 
-</form>
+
 
 
