--- a/src/app/layouts/component/sidebar/sidebar-create-new/modal/modal.component.scss
+++ b/src/app/layouts/component/sidebar/sidebar-create-new/modal/modal.component.scss
@@ -1,15 +1,44 @@
-form{
+.form {
   background: var(--darkGray);
   color: var(--color-text);
   padding: 1rem;
-  max-width: 500px;
+  width: 500px;
+
+
+  h1{
+    color: var(--color-text);
+    text-align: center;
+  }
+  .input-column{
+    width: 100%;
+    display: flex;
+
+
+    .form-field{
+      width: 100%;
+    }
+    .btn-closed{
+      color: #e3e1e1;
+      height: 100%;
+      margin-top: 5px;
+    }
+
+  }
 
   .form-field{
     width: 100%;
   }
-  .btnForm{
-    width: 100%;
-    padding-bottom: 0.5rem;
-  }
 
+  .actions{
+    width: 100%;
+
+    .btnForm{
+      width: 100%;
+      margin-bottom: 1rem;
+      padding: 0;
+    }
+  }
 }
+
+
+
