--- a/src/app/layouts/component/sidebar/sidebar-action/sidebar-action.component.html
+++ b/src/app/layouts/component/sidebar/sidebar-action/sidebar-action.component.html
@@ -1,6 +1,7 @@
 <button *ngFor="let item of listMenu ; trackBy: trackByFn "
         [class]=item.class
         [appActiveBtn]="item"
+        (click)="change(item)"
 >
   <svg width="16" height="16" xmlns="http://www.w3.org/2000/svg">
     <path
