--- a/src/app/layouts/component/content/content-column-list/content-column-name/content-column-name.component.html
+++ b/src/app/layouts/component/content/content-column-list/content-column-name/content-column-name.component.html
@@ -1,4 +1,5 @@
-
-  <span class="Column__title-ball Column__title-ball--0"></span>
-  <span class="Column__title-text" title="Now">{{name}}</span>
+<span class="Column__title-ball "
+      [ngClass]="columnClass(index)"
+></span>
+<span class="Column__title-text" title="Now">{{name}}</span>
 
