--- a/src/app/layouts/component/content/content-column-list/content-column-name/content-column-name.component.scss
+++ b/src/app/layouts/component/content/content-column-list/content-column-name/content-column-name.component.scss
@@ -1,6 +1,7 @@
-:host{
+:host {
   display: flex;
   align-items: center;
+  justify-content: center;
   margin-bottom: var(--margin-medium);
   font-size: var(--font-12);
   font-weight: 700;
