--- a/src/app/layouts/component/content/content-column-list/content-tasks/modal-window/modal-window.component.html
+++ b/src/app/layouts/component/content/content-column-list/content-tasks/modal-window/modal-window.component.html
@@ -1,4 +1,3 @@
-
 <div class="modal fade" id="modalToggle" aria-hidden="true" aria-labelledby="exampleModalToggleLabel" tabindex="-1">
   <div class="modal-dialog modal-dialog-centered ">
     <div class="modal-content ">
@@ -6,10 +5,12 @@
         <h1 class="modal-title text-center fs-5" id="exampleModalToggleLabel">Build UI for onboarding flow</h1>
         <button type="button" class="btn-close " data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
+
       <div class="modal-body">
         Subtasks (3 of 1)
         <div *ngFor="let item of subList" class="form-check mt-1 p-2 my-3">
-          <input class="form-check-input ms-1" type="checkbox" value="" id="flexCheckDefault1" [checked]="item.isCompleted">
+          <input class="form-check-input ms-1" type="checkbox" value="" id="flexCheckDefault1"
+                 [checked]="item.isCompleted">
           <label class="form-check-label ms-2 " for="flexCheckDefault1">
             {{item.title}}
           </label>
