--- a/src/app/features/action-btn-hide/action-btn-hide.component.scss
+++ b/src/app/features/action-btn-hide/action-btn-hide.component.scss
@@ -1,10 +1,17 @@
-.btnHide{
+:host {
   position: absolute;
-  bottom: 15px;
-  left: 15px;
-  padding: 1rem;
-  button{
-    background: gray;
+  bottom: 10px;
+  left: 0;
+}
+
+.btnHide {
+  display: grid;
+  place-items: center;
+  //padding: 0.5rem;
+
+  button {
+    //background: var(--darkGray);
+
     color: var(--color-text);
   }
 }
