--- a/src/app/layouts/component/content/content.component.html
+++ b/src/app/layouts/component/content/content.component.html
@@ -2,8 +2,10 @@
 
 
   <app-content-column-list
-    *ngFor="let item of list$ | async "
-    [item]="item">
+    *ngFor="let item of list$ | async ; trackBy:trackByFn;index as i "
+    [item]="item"
+    [index]="i"
+  >
   </app-content-column-list>
 
   <app-column-create></app-column-create>
