--- a/src/app/layouts/main-layout/main-layout.component.scss
+++ b/src/app/layouts/main-layout/main-layout.component.scss
@@ -1,5 +1,5 @@
 .main {
-  height: 100%;
+  height: 100vh;
   width: 100vw;
   background: var(--bg-main);
   color: var(--color-text);
@@ -14,8 +14,14 @@
     grid-template-areas:  'h h'
                           'c c';
 
+
     .sidebar {
       display: none;
+    }
+
+    .content {
+      margin-left: 1rem;
+      border-left: none;
     }
   }
 
