--- a/src/app/layouts/component/content/content-column-list/content-tasks/sub-modal/sub-modal.component.scss
+++ b/src/app/layouts/component/content/content-column-list/content-tasks/sub-modal/sub-modal.component.scss
@@ -17,11 +17,7 @@
     }
 
     .btn-title {
-      background: var(--darkGray);
 
-      span {
-        background: var(--darkGray);
-      }
     }
   }
 
@@ -57,5 +53,40 @@
     }
 
   }
+
+  .actions {
+    display: flex;
+    justify-content: space-between;
+  }
 }
 
+//select
+.panel.mat-mdc-select-panel {
+  background: var(--bg-main);
+  color: white;
+
+  .mdc-list-item__primary-text {
+    color: white;
+  }
+}
+
+.mdc-text-field--filled:not(.mdc-text-field--disabled) {
+  background-color: var(--bg-main);
+
+  .mdc-floating-label {
+    color: white;
+  }
+}
+
+.mat-mdc-select-value-text {
+  color: white;
+}
+
+//menu select
+.mat-mdc-menu-content {
+  background-color: var(--bg-main);
+}
+
+.mat-mdc-menu-item .mdc-list-item__primary-text {
+  color: white;
+}
