--- a/src/app/layouts/main-layout/main-layout.component.scss
+++ b/src/app/layouts/main-layout/main-layout.component.scss
@@ -1,6 +1,6 @@
 .main {
   height: 100vh;
-  width: 100vw;
+  width: 100%;
   background: var(--bg-main);
   color: var(--color-text);
   display: grid;
@@ -45,6 +45,8 @@
     background: var(--bg-main);
     border-left: 1px solid var(--darkGrayLine);
     border-top: 1px solid var(--darkGrayLine);
+    overflow: auto;
+    margin-bottom: 1rem;
 
   }
 
