--- a/src/app/layouts/component/content/content-column-list/content-tasks/sub-modal/edit-task-dialog/edit-task-dialog.component.html
+++ b/src/app/layouts/component/content/content-column-list/content-tasks/sub-modal/edit-task-dialog/edit-task-dialog.component.html
@@ -8,6 +8,7 @@
       <input matInput placeholder="Title"
              [value]="data.title"
              formControlName="title">
+      <mat-error *ngIf="title.invalid">Title is required</mat-error>
     </mat-form-field>
 
     <mat-form-field class="Description">
@@ -18,22 +19,17 @@
       ></textarea>
     </mat-form-field>
 
-    <p>Subtasks
-      <span *ngIf="!subTasks.controls.length">: None subtasks.Add first,please!!!</span></p>
-
+    <p> Subtasks
+      <span *ngIf="!subtasks.controls.length">: None subtasks.Add first,please!!!</span>
+    </p>
     <div
       class="input-column"
-      formArrayName="subTasks"
-      *ngFor="let itemControl of subTasks.controls; index as i">
-
+      formArrayName="subtasks"
+      *ngFor="let itemControl of subtasks.controls; index as i">
 
       <mat-form-field [formGroupName]="i" class="form-field">
-        <!--<mat-label>{{itemControl.value.title}}</mat-label>-->
         <input matInput type="text" formControlName="title">
-        <!-- <input matInput type="text" [formControlName]="item.title" [value]="item.title">-->
-        <!--<button *ngIf="item" matSuffix mat-icon-button aria-label="Clear">
-          <mat-icon>close</mat-icon>
-        </button>-->
+        <mat-error *ngIf="itemControl.invalid">Title is required</mat-error>
       </mat-form-field>
 
       <button
@@ -57,7 +53,7 @@
       <mat-form-field appearance="fill">
         <mat-label>Column</mat-label>
         <mat-select
-          formControlName="columns"
+          formControlName="status"
 
           panelClass="panel">
           <mat-option
