--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,7 +2,6 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@500;700&display=swap');
 
-
 :root {
   //space
   --margin-tiny: .5rem;
@@ -72,12 +71,12 @@
 }
 
 body {
-  background: var(--bg-main) !important;
+  background: var(--bg-main);
   font-size: 14px;
   line-height: 1.5;
   font-family: Plus Jakarta Sans, sans-serif;
   overflow: hidden;
-
+  margin: 0;
 }
 
 
@@ -90,6 +89,10 @@ h2 {
 }
 
 
+html, body {
+  height: 100%;
+}
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+body {
+  //font-family: Roboto, "Helvetica Neue", sans-serif;
+}
