add dialog page for addTask and actions with reducer

--- a/src/app/layouts/component/content/content-column-list/content-column-list.component.html
+++ b/src/app/layouts/component/content/content-column-list/content-column-list.component.html
@@ -3,6 +3,7 @@
   <app-content-column-name
     [name]="item.name"
     [index]="index"
+    [count]="count | async"
   ></app-content-column-name>
 
   <div class="Column__container "
