--- a/src/app/layouts/component/content/content-column-list/content-column-name/content-column-name.component.html
+++ b/src/app/layouts/component/content/content-column-list/content-column-name/content-column-name.component.html
@@ -1,5 +1,8 @@
 <span class="Column__title-ball "
       [ngClass]="columnClass(index)"
 ></span>
-<span class="Column__title-text" title="Now">{{name}}</span>
+
+<span class="Column__title-text" title="Now">{{name}}
+  <span>({{count}})</span>
+  </span>
 
