--- a/src/app/layouts/component/header/action-form/action-form.component.html
+++ b/src/app/layouts/component/header/action-form/action-form.component.html
@@ -1,5 +1,8 @@
 <div class="Launch__buttons">
-  <button type="button" class="Button     "> + Add New task </button>
+  <button type="button" class="Button"
+          (click)="openDialog()"
+  > + Add New task
+  </button>
   <div class="DropDown">
     <button type="button" tabindex="0" class="DropDown__button-ellipsis">
     </button>
