--- a/src/app/layouts/component/content/column-create/column-create.component.html
+++ b/src/app/layouts/component/content/column-create/column-create.component.html
@@ -1,3 +1,3 @@
 <div class="title">&nbsp;</div>
-<button class="addNewButton">+ New Column</button>
+<button class="addNewButton" (click)="addNewColumn()">+ New Column</button>
 
