change addColumns page ,change all listBtn ,actions,reducer

--- a/src/app/layouts/component/header/action-form/action-form.component.html
+++ b/src/app/layouts/component/header/action-form/action-form.component.html
@@ -4,7 +4,20 @@
   > + Add New task
   </button>
   <div class="DropDown">
-    <button type="button" tabindex="0" class="DropDown__button-ellipsis">
+    <button mat-icon-button [matMenuTriggerFor]="menu">
+      <mat-icon>more_vert</mat-icon>
     </button>
+
+    <mat-menu #menu="matMenu">
+      <button mat-menu-item>
+        <mat-icon>edit</mat-icon>
+        <span>Edit Board</span>
+      </button>
+
+      <button mat-menu-item (click)="deleteBoard()">
+        <mat-icon>delete</mat-icon>
+        <span>Delete Board</span>
+      </button>
+    </mat-menu>
   </div>
 </div>
