add page editBoard,add actions and reducer EditBoard

--- a/src/app/layouts/component/header/action-form/action-form.component.html
+++ b/src/app/layouts/component/header/action-form/action-form.component.html
@@ -9,7 +9,7 @@
     </button>
 
     <mat-menu #menu="matMenu">
-      <button mat-menu-item>
+      <button mat-menu-item (click)="editDialog()">
         <mat-icon>edit</mat-icon>
         <span>Edit Board</span>
       </button>
