--- a/src/app/layouts/component/content/content-column-list/content-column-name/content-column-name.component.scss
+++ b/src/app/layouts/component/content/content-column-list/content-column-name/content-column-name.component.scss
@@ -16,7 +16,7 @@
   min-width: 15px;
   height: 15px;
   border-radius: 100%;
-  margin-right: 12px;
+  margin-right: 0.5rem;
 
   &--0 {
     background: #49C4E5;
