--- a/src/app/layouts/component/header/action-form/add-task-dialog/add-task-dialog.component.html
+++ b/src/app/layouts/component/header/action-form/add-task-dialog/add-task-dialog.component.html
@@ -39,7 +39,7 @@
       </button>
     </div>
 
-    <button color="accent" mat-raised-button (click)="addSub()">
+    <button type="button" color="accent" mat-raised-button (click)="addSub()">
       <mat-icon>add</mat-icon>
       Add New Subtask
     </button>
