--- a/src/app/layouts/component/content/content.component.scss
+++ b/src/app/layouts/component/content/content.component.scss
@@ -1,46 +1,19 @@
 
 .Board {
-  // position: absolute;
-  // left: 18.75rem;
   display: flex;
   justify-content: flex-start;
-  width: 100%;
   height: 100%;
   color: var(--white);
   transition: left .2s ease;
   padding: var(--margin-medium) var(--margin-large);
   cursor: move;
-  // overflow-y: auto;
+  //overflow: auto;
   margin-bottom: 1rem;
+  gap: 1rem;
 
 }
 
-.modal {
-  .modal-dialog {
-    .modal-content {
 
-      background: var(--darkGray);
-      color: var(--color-text);
-
-      .modal-header {
-        border-bottom: none;
-
-
-      }
-
-      .modal-body {
-        padding-top: 0;
-
-        .form-check {
-
-          background: var(--bg-main);
-        }
-      }
-
-
-    }
-  }
-}
 
 
 
