--- a/src/app/layouts/component/header/action-form/edit-board-dialog/edit-board-dialog.component.html
+++ b/src/app/layouts/component/header/action-form/edit-board-dialog/edit-board-dialog.component.html
@@ -4,7 +4,7 @@
   <div class="content" mat-dialog-content>
 
     <mat-form-field class="title">
-      <mat-label>Title</mat-label>
+
       <input matInput placeholder="Title" formControlName="name">
     </mat-form-field>
 
@@ -31,7 +31,7 @@
       </button>
     </div>
 
-    <button color="accent" mat-raised-button (click)="addColumn()">
+    <button type="button" color="accent" mat-raised-button (click)="addColumn()">
       <mat-icon>add</mat-icon>
       Add New Column
     </button>
