--- a/src/app/layouts/component/header/action-form/edit-board-dialog/edit-board-dialog.component.scss
+++ b/src/app/layouts/component/header/action-form/edit-board-dialog/edit-board-dialog.component.scss
@@ -1,3 +1,4 @@
+@use './../../../../../scss/mixins' as d;
 
 .form {
   display: flex;
@@ -6,6 +7,10 @@
   background: var(--darkGray);
   color: var(--color-text);
   padding: 1.5rem;
+  @include d.mobile {
+    width: 300px;
+    overflow: auto;
+  }
 
   .h1 {
     color: var(--color-text);
