--- a/src/app/layouts/component/header/head/head.component.html
+++ b/src/app/layouts/component/header/head/head.component.html
@@ -1,1 +1,12 @@
+<img *ngIf="isMobile" alt="" src="assets/image/logo-mobile.svg">
 <h1 class="Launch__title" title="Platform Launch">{{title}}</h1>
+
+<ng-container *ngIf="isMobile">
+  <button mat-icon-button [matMenuTriggerFor]="menu">
+    <mat-icon>keyboard_arrow_down</mat-icon>
+  </button>
+</ng-container>
+
+<mat-menu #menu="matMenu">
+
+</mat-menu>
